--- a/pages/help.html
+++ b/pages/help.html
@@ -202,7 +202,7 @@
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav active" href="help.html">
                                         <i data-feather="help-circle"></i>
-                                        <span>Help & Supports</span>
+                                        <span>Supports</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-list">
@@ -239,7 +239,7 @@
                     <div class="page-title">
                         <div class="row">
                             <div class="col-6">
-                                <h3>Help & Supports</h3>
+                                <h3>Supports</h3>
                             </div>
                         </div>
                     </div>
