--- a/pages/index.html
+++ b/pages/index.html
@@ -202,7 +202,7 @@
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav " href="help.html">
                                         <i data-feather="help-circle"></i>
-                                        <span>Help & Supports</span>
+                                        <span>Supports</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-list">
@@ -247,85 +247,94 @@
                 <div class="container-fluid ecommerce">
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-6">
-                            <div class="card sale-chart">
-                                <div class="card-body">
-                                    <div class="d-flex">
-                                        <div class="flex-shrink-0">
-                                            <div class="sale-detail">
-                                                <div class="icon">
-                                                    <i data-feather="users"></i>
-                                                </div>
-                                                <div class="sale-content">
-                                                    <h3>Total Users</h3>
-                                                    <p>547</p>
+                            <a href="users.html">
+                                <div class="card sale-chart">
+                                    <div class="card-body">
+                                        <div class="d-flex">
+                                            <div class="flex-shrink-0">
+                                                <div class="sale-detail">
+                                                    <div class="icon">
+                                                        <i data-feather="users"></i>
+                                                    </div>
+                                                    <div class="sale-content">
+                                                        <h3>Total Users</h3>
+                                                        <p>547</p>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
 
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6">
-                            <div class="card sale-chart">
-                                <div class="card-body">
-                                    <div class="d-flex">
-                                        <div class="flex-shrink-0">
-                                            <div class="sale-detail">
-                                                <div class="icon">
-                                                    <i data-feather="shopping-bag"></i>
-                                                </div>
-                                                <div class="sale-content">
-                                                    <h3>Total Store</h3>
-                                                    <p>353</p>
+                            <a href="store.html">
+                                <div class="card sale-chart">
+                                    <div class="card-body">
+                                        <div class="d-flex">
+                                            <div class="flex-shrink-0">
+                                                <div class="sale-detail">
+                                                    <div class="icon">
+                                                        <i data-feather="shopping-bag"></i>
+                                                    </div>
+                                                    <div class="sale-content">
+                                                        <h3>Total Store</h3>
+                                                        <p>353</p>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
 
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6">
-                            <div class="card sale-chart">
-                                <div class="card-body">
-                                    <div class="d-flex">
-                                        <div class="flex-shrink-0">
-                                            <div class="sale-detail">
-                                                <div class="icon">
-                                                    <i class="fa-solid fa-blog"></i>
-                                                </div>
-                                                <div class="sale-content">
-                                                    <h3>Total Blogs</h3>
-                                                    <p>559 </p>
+                            <a href="market.html">
+                                <div class="card sale-chart">
+                                    <div class="card-body">
+                                        <div class="d-flex">
+                                            <div class="flex-shrink-0">
+                                                <div class="sale-detail">
+                                                    <div class="icon">
+                                                        <i data-feather="shopping-cart"></i>
+                                                    </div>
+                                                    <div class="sale-content">
+                                                        <h3>Total Open Market</h3>
+                                                        <p>67</p>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
 
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-6">
-                            <div class="card sale-chart">
-                                <div class="card-body">
-                                    <div class="d-flex">
-                                        <div class="flex-shrink-0">
-                                            <div class="sale-detail">
-                                                <div class="icon">
-                                                    <i data-feather="shopping-cart"></i>
-                                                </div>
-                                                <div class="sale-content">
-                                                    <h3>Total Open Market</h3>
-                                                    <p>67</p>
+                            <a href="blog.html">
+                                <div class="card sale-chart">
+                                    <div class="card-body">
+                                        <div class="d-flex">
+                                            <div class="flex-shrink-0">
+                                                <div class="sale-detail">
+                                                    <div class="icon">
+                                                        <i class="fa-solid fa-blog"></i>
+                                                    </div>
+                                                    <div class="sale-content">
+                                                        <h3>Total Blogs</h3>
+                                                        <p>559 </p>
+                                                    </div>
                                                 </div>
                                             </div>
-                                        </div>
 
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
+
                     </div>
                     <div class="col-lg-12">
                         <div class="card">
