--- a/pages/userNa.html
+++ b/pages/userNa.html
@@ -239,7 +239,7 @@
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav " href="help.html">
                                         <i data-feather="help-circle"></i>
-                                        <span>Help & Supports</span>
+                                        <span>Supports</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-list">
@@ -301,7 +301,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-12 box-col-12">
+                        <!-- <div class="col-lg-12 box-col-12">
                             <div class="card">
                                 <div class="card-body">
                                     <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
@@ -567,7 +567,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
