--- a/pages/market.html
+++ b/pages/market.html
@@ -241,7 +241,7 @@
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav " href="help.html">
                                         <i data-feather="help-circle"></i>
-                                        <span>Help & Supports</span>
+                                        <span>Supports</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-list">
@@ -308,7 +308,7 @@
                                         <div class="mt-2">
                                             <a href="productDetail.html" class="btn btn-primary w-100 mb-2">View
                                                 Product</a>
-                                            <a href="#" class="btn btn-danger w-100">Delete</a>
+                                            <!-- <a href="#" class="btn btn-danger w-100">Delete</a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -339,7 +339,7 @@
                                         <div class="mt-2">
                                             <a href="productDetail.html" class="btn btn-primary w-100 mb-2">View
                                                 Product</a>
-                                            <a href="#" class="btn btn-danger w-100">Delete</a>
+                                            <!-- <a href="#" class="btn btn-danger w-100">Delete</a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -370,7 +370,7 @@
                                         <div class="mt-2">
                                             <a href="productDetail.html" class="btn btn-primary w-100 mb-2">View
                                                 Product</a>
-                                            <a href="#" class="btn btn-danger w-100">Delete</a>
+                                            <!-- <a href="#" class="btn btn-danger w-100">Delete</a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -401,7 +401,7 @@
                                         <div class="mt-2">
                                             <a href="productDetail.html" class="btn btn-primary w-100 mb-2">View
                                                 Product</a>
-                                            <a href="#" class="btn btn-danger w-100">Delete</a>
+                                            <!-- <a href="#" class="btn btn-danger w-100">Delete</a> -->
                                         </div>
                                     </div>
                                 </div>
