--- a/pages/store.html
+++ b/pages/store.html
@@ -242,7 +242,7 @@
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav " href="help.html">
                                         <i data-feather="help-circle"></i>
-                                        <span>Help & Supports</span>
+                                        <span>Supports</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-list">
@@ -284,6 +284,98 @@
                 </div>
                 <div class="container-fluid ecommerce">
                     <div class="row">
+                        <div class="col-lg-4 col-xl-3 col-md-6 col-sm-12">
+                            <div class="card myCard">
+                                <div class="owl-carousel owl-theme">
+                                    <div class="item">
+                                        <div class="card-bg">
+                                            <img src="../assets/images/store/store-bg.svg" alt=""
+                                                class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="card-bg">
+                                            <img src="../assets/images/store/store-bg.svg" alt=""
+                                                class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="card-bg">
+                                            <img src="../assets/images/store/store-bg.svg" alt=""
+                                                class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card-body">
+                                    <div class="card-profile  mb-2">
+                                        <img class="rounded-circle" src="../assets/images/store/store-1.svg" alt="">
+                                    </div>
+                                    <div class="profile-details">
+                                        <h2>Kiddie store</h2>
+                                        <h6 class="mb-0"><i class="fa-regular fa-envelope"></i>
+                                            Kiddies@outlook.com</h6>
+                                        <h6><i class="fa fa-location-dot"></i>
+                                            Denver, United states</h6>
+                                    </div>
+                                    <div
+                                        class="profile-details mb-3  d-flex justify-content-between align-items-center">
+                                        <h6 class="my-0">Total Products</h6>
+                                        <h4><span class="counter">123</span></h4>
+                                    </div>
+                                    <div>
+                                        <a href="storedetails.html" class="btn btn-primary w-100 mb-2">View Store</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-xl-3 col-md-6 col-sm-12">
+                            <div class="card myCard">
+                                <div class="owl-carousel owl-theme">
+                                    <div class="item">
+                                        <div class="card-bg">
+                                            <img src="../assets/images/store/store-bg.svg" alt=""
+                                                class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="card-bg">
+                                            <img src="../assets/images/store/store-bg.svg" alt=""
+                                                class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="card-bg">
+                                            <img src="../assets/images/store/store-bg.svg" alt=""
+                                                class="img-fluid w-100">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card-body">
+                                    <div class="card-profile  mb-2">
+                                        <img class="rounded-circle" src="../assets/images/store/store-1.svg" alt="">
+                                    </div>
+                                    <div class="profile-details">
+                                        <h2>Kiddie store</h2>
+                                        <h6 class="mb-0"><i class="fa-regular fa-envelope"></i>
+                                            Kiddies@outlook.com</h6>
+                                        <h6><i class="fa fa-location-dot"></i>
+                                            Denver, United states</h6>
+                                    </div>
+                                    <div
+                                        class="profile-details mb-3  d-flex justify-content-between align-items-center">
+                                        <h6 class="my-0">Total Products</h6>
+                                        <h4><span class="counter">123</span></h4>
+                                    </div>
+                                    <div>
+                                        <a href="storedetails.html" class="btn btn-primary w-100 mb-2">View Store</a>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-lg-4 col-xl-3 col-md-6 col-sm-12">
                             <div class="card myCard">
                                 <div class="owl-carousel owl-theme">
