--- a/pages/newregstore.html
+++ b/pages/newregstore.html
@@ -484,7 +484,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="card">
+                                <!-- <div class="card">
                                     <div class="card-body">
                                         <div class="pro-group">
                                             <h4>Description</h4>
@@ -498,7 +498,7 @@
                                                 purchasing</p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="col-xl-8 box-col-12">
                                 <div class="card">
