--- a/website/pages/account.html
+++ b/website/pages/account.html
@@ -242,12 +242,16 @@
                                             <div class="collapse show d-block" id="navbarSupportedContent">
                                                 <ul class="mytabs ps-0">
                                                     <li class="w-100 active mb-12">
-                                                        <a href="myprofile.html" class="custom-links"><i
+                                                        <a href="account.html" class="custom-links"><i
                                                                 class="ri-user-line"></i> My profile</a>
                                                     </li>
                                                     <li class="w-100  mb-12">
                                                         <a href="message.html" class="custom-links"><i
                                                                 class="ri-chat-1-line"></i> Message</a>
+                                                    </li>
+                                                    <li class="w-100  mb-12">
+                                                        <a href="store.html" class="custom-links"><i
+                                                                class="ri-store-line"></i> My stores</a>
                                                     </li>
                                                     <li class="w-100  mb-12">
                                                         <a href="message.html" class="custom-links"><i
