--- a/website/pages/create-store.html
+++ b/website/pages/create-store.html
@@ -220,7 +220,7 @@
                         <div class="specific-header d-flex align-items-center gap-2">
                             <p class="mb-0"><a href="index.html">Home</a></p>
                             <span><i class="ri-arrow-right-s-line"></i></span>
-                            <span class="mb-0"><a href="index.html">Create store</a></span>
+                            <span class="mb-0"><a href="#">Create store</a></span>
                         </div>
                     </div>
                 </div>
