--- a/website/pages/Authentication/login.html
+++ b/website/pages/Authentication/login.html
@@ -40,7 +40,7 @@
                             <div class="or-divider">OR</div>
                         </div>
                         <div class="form-container text-start mb-27">
-                            <form action="../index.html">
+                            <form action="../afterlogin.html">
                                 <div class="mb-27">
                                     <label for="email">Email or phone number</label>
                                     <input type="text" class="custom-form">
