--- a/website/pages/faq.html
+++ b/website/pages/faq.html
@@ -32,7 +32,7 @@
             <div class="top-navbar mb-2">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
+                     <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
 
@@ -80,22 +80,19 @@
                                                     data-bs-toggle="dropdown" aria-expanded="false">
                                                     <div class="profile d-flex align-items-center gap-2">
                                                         <div class="icon">
-                                                            <!-- <i class="fa-regular fa-user"></i> -->
                                                             <i class="ri-user-line"></i>
                                                         </div>
                                                         <div class="icon-text">
-                                                            <p class="mb-0">Welcome</p>
-                                                            <h6 class="mb-0">Sign in/Register <i
+                                                            <p class="mb-0">Profile</p>
+                                                            <h6 class="mb-0">Jhone doe <i
                                                                     class="fa-solid fa-chevron-down"></i></h6>
                                                         </div>
                                                     </div>
                                                 </a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item"
-                                                            href="./Authentication/login.html">Login</a></li>
-                                                    <li><a class="dropdown-item"
-                                                            href="./Authentication/create_account.html">Register</a>
+                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
                                                     </li>
+                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -124,11 +121,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./Authentication/login.html">Login</a></li>
-                                        <li><a class="dropdown-item"
-                                                href="./Authentication/create_account.html">Register</a></li>
-                                    </ul>
+                                     <ul class="dropdown-menu">
+                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                                    </li>
+                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                                </ul>
                                 </div>
                             </div>
                         </div>
