--- a/website/pages/message.html
+++ b/website/pages/message.html
@@ -33,7 +33,7 @@
             <div class="top-navbar mb-2">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
+                     <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
 
@@ -81,22 +81,19 @@
                                                     data-bs-toggle="dropdown" aria-expanded="false">
                                                     <div class="profile d-flex align-items-center gap-2">
                                                         <div class="icon">
-                                                            <!-- <i class="fa-regular fa-user"></i> -->
                                                             <i class="ri-user-line"></i>
                                                         </div>
                                                         <div class="icon-text">
-                                                            <p class="mb-0">Welcome</p>
-                                                            <h6 class="mb-0">Sign in/Register <i
+                                                            <p class="mb-0">Profile</p>
+                                                            <h6 class="mb-0">Jhone doe <i
                                                                     class="fa-solid fa-chevron-down"></i></h6>
                                                         </div>
                                                     </div>
                                                 </a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item"
-                                                            href="./Authentication/login.html">Login</a></li>
-                                                    <li><a class="dropdown-item"
-                                                            href="./Authentication/create_account.html">Register</a>
+                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
                                                     </li>
+                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -125,11 +122,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./Authentication/login.html">Login</a></li>
-                                        <li><a class="dropdown-item"
-                                                href="./Authentication/create_account.html">Register</a></li>
-                                    </ul>
+                                     <ul class="dropdown-menu">
+                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                                    </li>
+                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                                </ul>
                                 </div>
                             </div>
                         </div>
@@ -250,15 +247,19 @@
                                                                 class="ri-chat-1-line"></i> Message</a>
                                                     </li>
                                                     <li class="w-100  mb-12">
-                                                        <a href="store.html" class="custom-links"><i
+                                                        <a href="account-store.html" class="custom-links"><i
                                                                 class="ri-store-line"></i> My stores</a>
                                                     </li>
                                                     <li class="w-100  mb-12">
-                                                        <a href="message.html" class="custom-links"><i
+                                                        <a href="community.html" class="custom-links"><i
+                                                                class="ri-group-line"></i> Community</a>
+                                                    </li>
+                                                    <li class="w-100  mb-12">
+                                                        <a href="change-password.html" class="custom-links"><i
                                                                 class="ri-shield-keyhole-line"></i> Change Password</a>
                                                     </li>
                                                     <li class="w-100  mb-12">
-                                                        <a href="message.html" class="custom-links"><i
+                                                        <a href="support.html" class="custom-links"><i
                                                                 class="ri-questionnaire-line"></i> Support</a>
                                                     </li>
                                                 </ul>
@@ -266,7 +267,7 @@
                                                     <h5>You too can own a Virtual store with us</h5>
                                                     <p>Learn how you can also list your product to gain customer
                                                         visibility</p>
-                                                    <a href="#" class="btn btn-market radius-100 d-flex"
+                                                    <a href="create-store.html" class="btn btn-market radius-100 d-flex"
                                                         style="width: fit-content;">Get a store space</a>
                                                 </div>
                                             </div>
