--- a/website/pages/productdetail.html
+++ b/website/pages/productdetail.html
@@ -33,7 +33,7 @@
             <div class="top-navbar mb-2">
                 <nav class="navbar navbar-expand-lg ">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#">
+                     <a class="navbar-brand" href="index.html">
                             <img src="../assets/images/logowhite.svg" alt="" class="img-fluid">
                         </a>
 
@@ -81,22 +81,19 @@
                                                     data-bs-toggle="dropdown" aria-expanded="false">
                                                     <div class="profile d-flex align-items-center gap-2">
                                                         <div class="icon">
-                                                            <!-- <i class="fa-regular fa-user"></i> -->
                                                             <i class="ri-user-line"></i>
                                                         </div>
                                                         <div class="icon-text">
-                                                            <p class="mb-0">Welcome</p>
-                                                            <h6 class="mb-0">Sign in/Register <i
+                                                            <p class="mb-0">Profile</p>
+                                                            <h6 class="mb-0">Jhone doe <i
                                                                     class="fa-solid fa-chevron-down"></i></h6>
                                                         </div>
                                                     </div>
                                                 </a>
                                                 <ul class="dropdown-menu">
-                                                    <li><a class="dropdown-item"
-                                                            href="./Authentication/login.html">Login</a></li>
-                                                    <li><a class="dropdown-item"
-                                                            href="./Authentication/create_account.html">Register</a>
+                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
                                                     </li>
+                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -125,11 +122,11 @@
                                     <a class="nav-link d-flex dropdown-toggle" href="#" type="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
                                         <i class="ri-user-line"></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./Authentication/login.html">Login</a></li>
-                                        <li><a class="dropdown-item"
-                                                href="./Authentication/create_account.html">Register</a></li>
-                                    </ul>
+                                     <ul class="dropdown-menu">
+                                                    <li><a class="dropdown-item" href="account.html">My Profile</a>
+                                                    </li>
+                                                    <li><a class="dropdown-item" href="index.html">Logout</a></li>
+                                                </ul>
                                 </div>
                             </div>
                         </div>
@@ -238,7 +235,7 @@
                                 <img src="../assets/images/grocery-item.png" alt="">
                             </div>
                             <div class="item">
-                                <img src="../assets/images/grocery-item.png" alt="">
+                                <img src="../assets/images/showcase.png" alt="">
                             </div>
                         </div>
 
@@ -247,7 +244,7 @@
                                 <img src="../assets/images/grocery-item.png" alt="">
                             </div>
                             <div class="item">
-                                <img src="../assets/images/grocery-item.png" alt="">
+                                <img src="../assets/images/showcase.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -283,10 +280,243 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row mt-5">
+                    <div class="col-lg-12">
+                        <div class="store-about">
+                            <h4 class="mb-22">About store</h4>
+                            <div class="store-profile">
+                                <img src="../assets/images/store/store-12.png" alt="" class="mb-10">
+                                <h5 class="mb-12">Foodcourt</h5>
+                                <p class="mb-12">Welcome to Kiddies Store, your one-stop destination for all things
+                                    children's
+                                    essentials! Dive into a world of enchantment and practicality as you explore our
+                                    carefully curated collection. From adorable clothing to educational toys and
+                                    everything in between, we cater to the needs of your little ones at every stage of
+                                    their journey. Discover joy, creativity, and convenience with Kiddies Store – where
+                                    childhood dreams come to life!</p>
+                                <div class="social-icon mb-22">
+                                    <div class="mail mb-12">
+                                        <i class="fa-regular fa-envelope"></i>
+                                        <p class="mb-0">Foodcourt@outlook.com</p>
+                                    </div>
+                                    <div class="location">
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <p class="mb-0">Denver, Colorado. United states</p>
+                                    </div>
+                                </div>
+                                <a href="#" class="btn btn-market radius-100 ">Contact Seller</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
+        <section class="open_market pr py-50" id="open_market">
+            <div class="container-fluid">
+                <div class="open_container pt-3">
+                    <h3 class="mb-22">More items from this store</h3>
+                    <div class="row">
+                        <div class="col-lg-4 mb-4">
+                            <div class="card custom-card ">
+                                <div class="card-body ">
+                                    <div class="open-info mb-2">
+                                        <h4>Air Jordans 1</h4>
+                                        <div class="d-flex align-items-center gap-2">
+                                            <h5 class="mb-0 ">
+                                                <p class="mb-0 dollar">$</p>
+                                            </h5>
+                                            <h6 class="mb-0">254.99</h6>
+                                        </div>
+                                    </div>
+                                    <div class="owl-carousel owl-theme open-carousel">
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-1.png" alt=""
+                                                class="img-fluid store-image">
 
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-7.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-8.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-10.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card custom-card ">
+                                <div class="card-body ">
+                                    <div class="open-info mb-2">
+                                        <h4>Tee shirts</h4>
+                                        <div class="d-flex align-items-center gap-2">
+                                            <h5 class="mb-0 ">
+                                                <p class="mb-0 dollar">$</p>
+                                            </h5>
+                                            <h6 class="mb-0">254.99</h6>
+                                        </div>
+                                    </div>
+                                    <div class="owl-carousel owl-theme open-carousel">
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-7.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-8.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-10.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-1.png" alt=""
+                                                class="img-fluid store-image">
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card custom-card ">
+                                <div class="card-body ">
+                                    <div class="open-info mb-2">
+                                        <h4>Rings</h4>
+                                        <div class="d-flex align-items-center gap-2">
+                                            <h5 class="mb-0 ">
+                                                <p class="mb-0 dollar">$</p>
+                                            </h5>
+                                            <h6 class="mb-0">254.99</h6>
+                                        </div>
+                                    </div>
+                                    <div class="owl-carousel owl-theme open-carousel">
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-8.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-10.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-1.png" alt=""
+                                                class="img-fluid store-image">
+
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-7.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 mb-4">
+                            <div class="card custom-card ">
+                                <div class="card-body ">
+                                    <div class="open-info mb-2">
+                                        <h4>Baby wears</h4>
+                                        <div class="d-flex align-items-center gap-2">
+                                            <h5 class="mb-0 ">
+                                                <p class="mb-0 dollar">$</p>
+                                            </h5>
+                                            <h6 class="mb-0">254.99</h6>
+                                        </div>
+                                    </div>
+                                    <div class="owl-carousel owl-theme open-carousel">
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-10.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-1.png" alt=""
+                                                class="img-fluid store-image">
+
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-7.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                        <div class="item ">
+                                            <img src="../assets/images/store/store-8.png" alt=""
+                                                class="img-fluid store-image">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="open_market pr py-50" id="open_market">
+            <div class="container-fluid">
+                <div class="open_container pt-3">
+                    <h3 class="mb-22">More items from this store</h3>
+                    <div class="row" id="circle-store">
+                        <div class="col-lg-2 mb-3">
+                            <div class="text-center">
+                                <img src="../assets/images/store/store-2.png" alt="" class="mb-22">
+                                <h5>Kiddies store</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 mb-3">
+                            <div class="text-center">
+                                <img src="../assets/images/store/store-3.png" alt="" class="mb-22">
+                                <h5>Teddies</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 mb-3">
+                            <div class="text-center">
+                                <img src="../assets/images/store/store-4.png" alt="" class="mb-22">
+                                <h5>AR home</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 mb-3">
+                            <div class="text-center">
+                                <img src="../assets/images/store/store-5.png" alt="" class="mb-22">
+                                <h5>Mobile store</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 mb-3">
+                            <div class="text-center">
+                                <img src="../assets/images/store/store-6.png" alt="" class="mb-22">
+                                <h5>Laptops hub</h5>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 mb-3">
+                            <div class="text-center">
+                                <img src="../assets/images/store/store-7.png" alt="" class="mb-22">
+                                <h5>Riders tools</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="virtualy-space pr py-50">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="virtual-bg">
+                            <h2 class="mb-8">You too can own a Virtual store with us</h2>
+                            <p class="mb-12">Learn how you can also list your product to gain customer visibility</p>
+                            <a href="create-store.html" class="btn btn-market radius-100 ">Get a store space</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <footer id="footer " class="pr">
             <div class="py-100 ">
